- Controller   * added new controller screens
- Helper
  * added new helper screens

- Models
  * added new model screen

- Migration
  * added new migration screen

- Partials
  * modified menu partial

- Routes
  * added new routes for screen module

--- a/app/views/shared/_new_menu.html.erb
+++ b/app/views/shared/_new_menu.html.erb
@@ -1,5 +1,5 @@
 <div id="marco">
-  <span class="preload2"></span>
+
   <!--MENU-->
   <ul class="menu2">
     <li class="top"><a href="#" id="telmex" class="top_link"><span class="down">Hardware</span>
@@ -43,12 +43,20 @@
             <li><a href="/dvds/new">New</a></li>
           </ul>
         </li>
+        <li><a href="/screens" class="fly">Screens</a>
+          <ul>
+            <li><a href="/screens">List</a></li>
+            <li><a href="/screens/new">New</a></li>
+          </ul>
+        </li>
 
       </ul>
       <!--[if lte IE 6]></td></tr></table></a><![endif]-->
     </li>
 
-    <li class="top"><a href="#" id="telmex" class="top_link"><span class="down">Marks</span>
+    <li class="top">
+      <a href="#" id="telmex" class="top_link">
+        <span class="down">Marks</span>
         <!--[if gte IE 7]><!--></a><!--<![endif]-->
       <!--[if lte IE 6]><table><tr><td><![endif]-->
       <ul class="sub">
@@ -57,6 +65,7 @@
       </ul>
       <!--[if lte IE 6]></td></tr></table></a><![endif]-->
     </li>
-
-    <!-- FIN MENU-->
+  </ul>
+</ul>
+<!-- FIN MENU-->
 </div>
