--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -120,7 +120,7 @@ a:hover
 {
     margin-top: 0.5em;
     padding: 1.25em 1em 0.25em 1em;
-    background: #ffffff url('images/a1.gif') top left repeat-x;
+    background: #ffffff url('../images/a1.gif') top left repeat-x;
 }
 
 /** boxA **/
@@ -408,7 +408,7 @@ div.auto_complete ul strong.highlight {
 .menu2 :hover ul.sub {left:6px; top:25px; background: #fff; padding:0; /*border:1px solid #1E8BB5; white-space:nowrap;*/ width:auto; height:auto; font-weight:normal;}
 .menu2 :hover ul.sub li {display:block; /*height:20px; */position:relative; float:left; width:160px; border-bottom:1px solid #000000; border-left:1px solid #000000; border-right:1px solid #000000; margin-bottom:0;}
 .menu2 :hover ul.sub li a {display:block; height:auto; font-size:11px; padding:4px 3px; line-height:1; color:#000000; text-decoration:none;}
-.menu2 :hover ul.sub li a.fly {background:#fff  url(http://www.luisangelcamargo.com/wp-content/uploads/2007/12/vineta_menu.gif) no-repeat 150px 6px;}
+.menu2 :hover ul.sub li a.fly {background:#fff url('../images/down.png') no-repeat 140px 3px;}
 .menu2 :hover ul.sub li a:hover {background:#000000; color:#FFFFFF;}
 .menu2 :hover ul.sub li a.fly:hover {background:#000000; color:#FFFFFF;}
 .menu2 :hover ul li:hover > a.fly {background:white}
