- Model   * added printers
- Controllers
  * added printer

- Views
  * added printer

- Helpers
  * added printer

- Routes
  * added printer

- Migration
  * added printer

- Fixes
  * all new link with troubles

--- a/app/views/shared/_new_menu.html.erb
+++ b/app/views/shared/_new_menu.html.erb
@@ -2,6 +2,22 @@
 
   <!--MENU-->
   <ul class="menu2">
+
+
+    <li class="top">
+      <a href="#" id="telmex" class="top_link">
+        <span class="down">Point</span>
+        <!--[if gte IE 7]><!--></a><!--<![endif]-->
+      <!--[if lte IE 6]><table><tr><td><![endif]-->
+      <ul class="sub">
+        <li><a href="/points">List</a></li>
+        <li><a href="/points/new">New</a></li>
+      </ul>
+      <!--[if lte IE 6]></td></tr></table></a><![endif]-->
+    </li>
+
+
+
     <li class="top"><a href="#" id="telmex" class="top_link"><span class="down">Hardware</span>
         <!--[if gte IE 7]><!--></a><!--<![endif]-->
       <!--[if lte IE 6]><table><tr><td><![endif]-->
@@ -49,7 +65,12 @@
             <li><a href="/screens/new">New</a></li>
           </ul>
         </li>
-
+        <li><a href="/printers" class="fly">Printers</a>
+          <ul>
+            <li><a href="/printers">List</a></li>
+            <li><a href="/printers/new">New</a></li>
+          </ul>
+        </li>
       </ul>
       <!--[if lte IE 6]></td></tr></table></a><![endif]-->
     </li>
