- Helpers and View   * little changes

--- a/app/views/computers/_stats.html.erb
+++ b/app/views/computers/_stats.html.erb
@@ -1,4 +1,4 @@
-In numbers:
+In numbers: <%= url_google_graph_pie_3d @availables, @unavailables %>
 
 <div>
 All: <%= @all %>
@@ -17,5 +17,5 @@ Total: <%= @total %>
 </div>
 
 
-<%= url_google_graph @availables, @unavailables %>
+
 
