- Controllers   * new places controller
- Helpers
  * new places helper
  * added new method

- Model
  * added new model place
  * modify model computer to add relationship with places

- Views
  * added views for places
  * adapted views for computers

- Routes
  * added new route for places

- Layout
  * adapted layout places

- Migration
  * added migration

--- a/app/views/computers/_form.html.erb
+++ b/app/views/computers/_form.html.erb
@@ -22,6 +22,9 @@
     Not<%= radio_button('computer', 'available', 'f') %>
   </fieldset>
 
+  <%= collection_select 'computer', 'place_id', Place.find(:all), 'id', 'title',
+      {:prompt => true} %>
+
   <% if action_name == 'new' %>
   <%= f.submit "Create" %>
   <% else %>
