--- a/app/views/computers/_stats.html.erb
+++ b/app/views/computers/_stats.html.erb
@@ -1,4 +1,4 @@
-In numbers: <%= url_google_graph_pie_3d @availables, @unavailables %>
+In numbers of computers: <b><%= url_google_graph_pie_3d @availables, @unavailables %></b>
 
 <div>
 All: <%= @all %>
@@ -11,11 +11,6 @@ Availables: <%= @availables %>
 <div>
 Unavailables: <%= @unavailables %>
 </div>
-
-<div>
-Total: <%= @total %>
-</div>
-
 
 
 
