--- a/app/views/computers/_list.html.erb
+++ b/app/views/computers/_list.html.erb
@@ -9,6 +9,7 @@
     <th>Memory</th>
     <th>Cd</th>
     <th>Dvd</th>
+    <th>Place</th>
     <th colspan='3'>Actions</th>
   </tr>
 <% for computer in @computers %>
@@ -22,6 +23,7 @@
     <td><%= computer.memory.collect {|x| x.model + '<br>' } rescue nil %></td>
     <td><%= computer.cd.collect {|x| x.model + '<br>' } rescue nil %></td>
     <td><%= computer.dvd.collect {|x| x.model + '<br>' } rescue nil %></td>
+    <td><%= computer.place.title rescue nil %></td>
     <td><%= link_to 'Show', computer %></td>
     <td><%= link_to 'Edit', edit_computer_path(computer) %></td>
     <td><%= link_to 'Destroy', computer, :confirm => 'Are you sure?', :method => :delete %></td>
