--- a/app/views/shared/_new_menu.html.erb
+++ b/app/views/shared/_new_menu.html.erb
@@ -6,12 +6,12 @@
 
     <li class="top">
       <a href="#" id="telmex" class="top_link">
-        <span class="down">Point</span>
+        <span class="down">Places</span>
         <!--[if gte IE 7]><!--></a><!--<![endif]-->
       <!--[if lte IE 6]><table><tr><td><![endif]-->
       <ul class="sub">
-        <li><a href="/points">List</a></li>
-        <li><a href="/points/new">New</a></li>
+        <li><a href="/places">List</a></li>
+        <li><a href="/places/new">New</a></li>
       </ul>
       <!--[if lte IE 6]></td></tr></table></a><![endif]-->
     </li>
