--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -128,9 +128,9 @@ a:hover
 .boxA .boxContent
 {
     margin-top: 0em;
-    color: #fff;
-    border-bottom: solid 1px #bb6600;
-    background: #999900;
+    color: #000;
+    border: solid 1px #000;
+    background: #fff;
     padding: 0em 0em 0em 3em;
 }
 
@@ -143,7 +143,7 @@ a:hover
 .boxA a
 {
     background-color: inherit;
-    color: #fff;
+    color: #000;
     font-size: 0.8em;
 }
 
@@ -408,7 +408,7 @@ div.auto_complete ul strong.highlight {
 .menu2 :hover ul.sub {left:6px; top:25px; background: #fff; padding:0; /*border:1px solid #1E8BB5; white-space:nowrap;*/ width:auto; height:auto; font-weight:normal;}
 .menu2 :hover ul.sub li {display:block; /*height:20px; */position:relative; float:left; width:160px; border-bottom:1px solid #000000; border-left:1px solid #000000; border-right:1px solid #000000; margin-bottom:0;}
 .menu2 :hover ul.sub li a {display:block; height:auto; font-size:11px; padding:4px 3px; line-height:1; color:#000000; text-decoration:none;}
-.menu2 :hover ul.sub li a.fly {background:#fff url('../images/down.png') no-repeat 140px 3px;}
+.menu2 :hover ul.sub li a.fly {background:#fff;}
 .menu2 :hover ul.sub li a:hover {background:#000000; color:#FFFFFF;}
 .menu2 :hover ul.sub li a.fly:hover {background:#000000; color:#FFFFFF;}
 .menu2 :hover ul li:hover > a.fly {background:white}
