--- a/app/views/places/_list.html.erb
+++ b/app/views/places/_list.html.erb
@@ -2,12 +2,14 @@
   <tr>
     <th>Title</th>
     <th>Description</th>
+    <th>Computers</th>
     <th colspan='3'>Actions</th>
   </tr>
 <% for place in @places %>
   <tr  class="<%= cycle("rowA","rowB") %>">
     <td><%= place.title %></td>
     <td><%= place.description %></td>
+    <td><%= place.computer.count %></td>
     <td><%= link_to 'Show', place %></td>
     <td><%= link_to 'Edit', edit_place_path(place) %></td>
     <td><%= link_to 'Destroy', place, :confirm => 'Are you sure?', :method => :delete %></td>
