- Controllers   * little changes in show method of places controller
- Model
  * added named scope for get list of computers in a
    specific place

- Partials
  * little changes for show info of places with computers
    inside a place

--- a/app/views/places/_list.html.erb
+++ b/app/views/places/_list.html.erb
@@ -7,7 +7,7 @@
   </tr>
 <% for place in @places %>
   <tr  class="<%= cycle("rowA","rowB") %>">
-    <td><%= place.title %></td>
+    <td><%= link_to place.title, place %></td>
     <td><%= place.description %></td>
     <td><%= place.computer.count %></td>
     <td><%= link_to 'Show', place %></td>
