--- a/app/views/places/_form.html.erb
+++ b/app/views/places/_form.html.erb
@@ -9,7 +9,9 @@
 <p>
   <%= f.label 'description' %>
   <br>
-  <%= f.text_area :description %>
+  <%= select( "place", "description", {"Departament" => "departament",
+    "Office" => "office", "Room" => "room", "Store" => "store"},
+  { :prompt => true }) %>
 </p>
 
 <p>
