- Controllers   * deleted routes now unnecesary and add a new route
- Layouts
  * little changes

- Views
  * added view list places
  * addapted view index for places

- Partial
  * fixed search for places
  * changes in menu application

--- a/app/views/layouts/places.html.erb
+++ b/app/views/layouts/places.html.erb
@@ -26,8 +26,9 @@
           </div>
         </div>
         <div id="secondaryContent">
-          <% if controller.action_name != 'edit' && controller.action_name != 'show' &&
-             controller.action_name != 'new' && controller.action_name != 'create' %>
+          <% if (controller.action_name != 'edit' && controller.action_name != 'show' &&
+             controller.action_name != 'new' && controller.action_name != 'create') ||
+             (controller.action_name == 'list') %>
           <div class="box boxB">
             <div class="boxContent">
               <%= render :partial => 'search' %>
