--- a/app/views/shared/_new_menu.html.erb
+++ b/app/views/shared/_new_menu.html.erb
@@ -10,7 +10,7 @@
         <!--[if gte IE 7]><!--></a><!--<![endif]-->
       <!--[if lte IE 6]><table><tr><td><![endif]-->
       <ul class="sub">
-        <li><a href="/places">List</a></li>
+        <li><a href="/places">List all places</a></li>
         <li><a href="/places/new">New</a></li>
       </ul>
       <!--[if lte IE 6]></td></tr></table></a><![endif]-->
