--- a/app/views/places/_search.html.erb
+++ b/app/views/places/_search.html.erb
@@ -1,11 +1,8 @@
-<%= javascript_include_tag :defaults %>
+<br>
 
-<table>
+<%= javascript_include_tag :defaults %>
   <% form_tag :action => 'search' do %>
-  <tr>
-    <td><label>Place:</label></td>
-    <td><%= text_field_with_auto_complete :place, :title, {:size => 20}, {:method => :get} %></td>
-    <td><%= submit_tag "Search" %></td>
-  </tr>
+    <label>Place:</label>
+    <%= text_field_with_auto_complete :place, :title, {:size => 20}, {:method => :get} %>
+    <%= submit_tag "Search" %>
   <% end %>
-</table>
