- Controllers   * added in list action a new variable for text descriptions
- Layout
  * added call to partial selector of places

- Partial
  * fixed a gramatical error in form partial
  * refactoring in list partial
  * added a new partial to show a selector of places

--- a/app/views/layouts/places.html.erb
+++ b/app/views/layouts/places.html.erb
@@ -19,7 +19,6 @@
           <div id="primaryContent">
             <div class="box">
               <div class="boxContent">
-                <h2><%= controller.controller_name %> : <%= controller.action_name %></h2>
                 <%= yield  %>
               </div>
             </div>
@@ -32,6 +31,8 @@
           <div class="box boxB">
             <div class="boxContent">
               <%= render :partial => 'search' %>
+              <div class="clear"></div>
+              <%= render :partial => 'selector_places_list' %>
             </div>
           </div>
           <% else %>
