--- a/app/views/places/_form.html.erb
+++ b/app/views/places/_form.html.erb
@@ -9,7 +9,7 @@
 <p>
   <%= f.label 'description' %>
   <br>
-  <%= select( "place", "description", {"Departament" => "departament",
+  <%= select( "place", "description", {"Department" => "department",
     "Office" => "office", "Room" => "room", "Store" => "store"},
   { :prompt => true }) %>
 </p>
