--- a/app/views/places/_list.html.erb
+++ b/app/views/places/_list.html.erb
@@ -1,3 +1,4 @@
+<h2><%= @text %></h2>
 <table>
   <tr>
     <th>Title</th>
@@ -16,13 +17,3 @@
   </tr>
 <% end %>
 </table>
-
-
-<% @options = {:all => 'all',
-               :departments => 'departments',
-               :offices => 'offices',
-               :rooms => 'rooms',
-               :stores =>'stores',
-               :select =>'select'} %>
-
-<%= select_tag 'sort[]', options_for_select(@options), :include_prompt => true,:onchange => remote_function(:url => {:controller => 'places', :action => 'list'}, :with => "'places='+this.value", :update => "outer") %>
