--- a/app/views/places/_selector_places_list.html.erb
+++ b/app/views/places/_selector_places_list.html.erb
@@ -1,5 +1,5 @@
 <% cache(:fragment => "places/_selector_places_list") do %>
-
+<label>Select diferents places for description:</label>
 <% @options = [
    ['Select one','select one'],
    ['all','all'],
