--- a/app/views/computers/_search.html.erb
+++ b/app/views/computers/_search.html.erb
@@ -1,3 +1,4 @@
+<% cache(:fragment => "computers/_search") do %>
 <%= javascript_include_tag :defaults %>
 
 <table>
@@ -23,3 +24,4 @@
   </tr>
   <% end %>
 </table>
+<% end %>
