- Layout   * deleted an unnecesary line
- View
  * little changes

- Partial
  * added cache method in menu partial

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,10 +1,8 @@
 
-Place : <%= @place.title %>
-<br>
-Description: <%= @place.title %>
-<br>
+<%= @place.description.upcase %> : <%= @place.title %>
 
 List of computers in this place:
+
 <%= render :partial => 'computers/list' %>
 <br>
 
