--- a/app/views/shared/_new_menu.html.erb
+++ b/app/views/shared/_new_menu.html.erb
@@ -1,3 +1,4 @@
+<% cache(:fragment => "shared/_new_menu") do %>
 <div id="marco">
 
   <!--MENU-->
@@ -90,3 +91,4 @@
 </ul>
 <!-- FIN MENU-->
 </div>
+<% end %>
