- Controllers   * added call to private method stats in search action   * added private method stats in places controller
- Helpers
  * added new method in places_helper

- Layouts
  * added call to partial stats in layout

- Partial
  * added new partial stats for places

--- a/app/views/layouts/places.html.erb
+++ b/app/views/layouts/places.html.erb
@@ -43,6 +43,13 @@
           <% end %>
         </div>
       </div>
+      <div id="secondaryContent">
+        <div class="box boxA">
+          <div class="boxContent">
+            <%= render :partial => 'stats' %>
+          </div>
+        </div>
+      </div>
       <div class="clear"></div>
       <div id="footer">
         <p>Webmaster <a href="http://www.cesardiaz.com.ar">Cesar Diaz</a></p>
