- Partials   * refactoring to show image pie stats in line

--- a/app/views/places/_stats.html.erb
+++ b/app/views/places/_stats.html.erb
@@ -1,6 +1,4 @@
 <% cache(:fragment => "places/_stats") do %>
-In numbers of places: <b><%= url_google_graph_pie_3d @hash %></b>
-
 <div>
   <%= link_to 'All', :controller => "places", :action => "index" %>
   <%= @all %>
@@ -25,5 +23,9 @@ In numbers of places: <b><%= url_google_graph_pie_3d @hash %></b>
   Stores
   <%= @stores %>
 </div>
+
+
+<%  @value = GoogleChart.pie_3d_290x100(@hash).to_url %>
+<%= image_tag(@value)  rescue nil %>
 
 <% end %>
