--- a/app/views/computers/_stats.html.erb
+++ b/app/views/computers/_stats.html.erb
@@ -1,5 +1,5 @@
 <% cache(:fragment => "computers/_stats") do %>
-In numbers of places: <b><%= url_google_graph_pie_3d @hash %></b>
+In numbers of places:
 
 
 <div>
@@ -16,5 +16,9 @@ In numbers of places: <b><%= url_google_graph_pie_3d @hash %></b>
   <%= link_to 'Unavailables', :controller => "computers", :action => "unavailable" %>
   <%= @unavailables %>
 </div>
+
+
+<%  @value = GoogleChart.pie_3d_290x100(@hash).to_url %>
+<%= image_tag(@value)  rescue nil %>
 
 <% end %>
