--- a/app/views/computers/_stats.html.erb
+++ b/app/views/computers/_stats.html.erb
@@ -1,6 +1,5 @@
 <% cache(:fragment => "computers/_stats") do %>
-In numbers of places:
-
+In numbers of computers:
 
 <div>
   <%= link_to 'All', :controller => "computers", :action => "index" %>
