--- a/app/views/places/_stats.html.erb
+++ b/app/views/places/_stats.html.erb
@@ -1,4 +1,6 @@
 <% cache(:fragment => "places/_stats") do %>
+In numbers of places:
+
 <div>
   <%= link_to 'All', :controller => "places", :action => "index" %>
   <%= @all %>
