--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -369,17 +369,18 @@ div.auto_complete ul strong.highlight {
     top: 0px;
     left: 0px;
     width: 100%;
-    margin:30px 1px 1px 400px;
+    margin:30px 1px 1px 0px;
     padding:0px;
 }
 
 .preload2
 .menu2 {padding:0; margin:0; margin-bottom:0; list-style:none; height:25px; background:red; position:relative; font-family:arial, verdana, sans-serif; }
-.menu2 li.top {display:block; float:left; position:relative;}
-.menu2 li a.top_link {display:block; float:left; height:25px; margin-left:6px; line-height:25px; color:#FFF; text-decoration:none; font-size:11px; font-weight:bold; padding:0 0 0 6px; cursor:pointer;}
+.menu2 li.top {display:block; margin:0px 50px 1px 2px; float:left; position:relative;}
+.menu2 li a.top_link {display:block; float:right; height:25px; margin-left:6px; line-height:25px; color:#FFF;
+ text-decoration:none; font-size:11px; font-weight:bold; padding:0 0 0 6px; cursor:pointer;}
 .menu2 li a.top_link span {float:left; display:block; padding:0 10px 0 6px; height:40px;}
 .menu2 li a.top_link span.down {float:left; display:block; padding:0 10px 0 6px; height:25px;/*background:url(prodrop2/down.gif) no-repeat right top;*/}
-.menu2 li a.top_link:hover {color: white;}
+.menu2 li a.top_link:hover {color: #FFF;}
 .menu2 li a.top_link:hover
 .menu2 li a.top_link:hover
 
