- Controllers   * refactoring stats method in computers controller   * refactoring stats method in places controller
- Helpers
  * add workstations

- Models
  * add workstation model

- Partials
  * refactoring stats partials
  * add new partials for workstation

- Views
  * add new views for workstations

- Migrations
  * added migrate for workstations

- Plugins
  * added new plugin 'google_charts_on_rails'

--- a/app/views/computers/_stats.html.erb
+++ b/app/views/computers/_stats.html.erb
@@ -17,7 +17,7 @@ In numbers of computers:
 </div>
 
 
-<%  @value = GoogleChart.pie_3d_330x100(@hash).to_url %>
+<%  @value = GoogleChart.pie_3d_330x100(@chart).to_url %>
 <%= image_tag(@value)  rescue nil %>
 
 
