--- a/app/views/shared/_new_menu.html.erb
+++ b/app/views/shared/_new_menu.html.erb
@@ -4,6 +4,18 @@
   <!--MENU-->
   <ul class="menu2">
 
+    <li class="top">
+      <a href="#" id="telmex" class="top_link">
+        <span class="down">Workstations</span>
+        <!--[if gte IE 7]><!--></a><!--<![endif]-->
+      <!--[if lte IE 6]><table><tr><td><![endif]-->
+      <ul class="sub">
+        <li><a href="/workstations">List all workstations</a></li>
+        <li><a href="/workstations/new">New</a></li>
+      </ul>
+      <!--[if lte IE 6]></td></tr></table></a><![endif]-->
+    </li>
+
 
     <li class="top">
       <a href="#" id="telmex" class="top_link">
@@ -16,7 +28,6 @@
       </ul>
       <!--[if lte IE 6]></td></tr></table></a><![endif]-->
     </li>
-
 
 
     <li class="top"><a href="#" id="telmex" class="top_link"><span class="down">Hardware</span>
