- Controllers   * modified method new for add ajax action
- Models
  * add relationship with printer and screen model in
    place model

- Partials
  * adapt forms and list in printers and screens to use
    place field
  * add selector of places

- Migration
  * added place_id fields in printers and screens

--- a/app/views/printers/_form.html.erb
+++ b/app/views/printers/_form.html.erb
@@ -8,6 +8,9 @@
 
   <%= collection_select 'printer', 'mark_id', Mark.find(:all), 'id', 'name',
       {:prompt => true} %>
+
+  <%= collection_select 'printer', 'place_id', Place.find(:all), 'id', 'title',
+      {:prompt => true} %>
   <p>
     <% if action_name == 'new' %>
     <%= f.submit "Create" %>
