--- a/app/views/printers/_list.html.erb
+++ b/app/views/printers/_list.html.erb
@@ -3,6 +3,7 @@
     <th>Model</th>
     <th>Serial Number</th>
     <th>Mark</th>
+    <th>Place</th>
     <th colspan='3'>Actions</th>
   </tr>
 <% for printer in @printers %>
@@ -10,6 +11,7 @@
     <td><%= printer.model %></td>
     <td><%= printer.serialnumber %></td>
     <td><%= printer.mark.name rescue nil  %></td>
+    <td><%= printer.place.title rescue nil %></td>
     <td><%= link_to 'Show', printer %></td>
     <td><%= link_to 'Edit', edit_printer_path(printer) %></td>
     <td><%= link_to 'Destroy', printer, :confirm => 'Are you sure?', :method => :delete %></td>
