--- a/app/views/screens/_list.html.erb
+++ b/app/views/screens/_list.html.erb
@@ -3,6 +3,7 @@
     <th>Model</th>
     <th>Serial Number</th>
     <th>Mark</th>
+    <th>Place</th>
     <th colspan='3'>Actions</th>
   </tr>
 <% for screen in @screens %>
@@ -10,6 +11,7 @@
     <td><%= screen.model %></td>
     <td><%= screen.serialnumber %></td>
     <td><%= screen.mark.name rescue nil  %></td>
+    <td><%= screen.place.title rescue nil %></td>
     <td><%= link_to 'Show', screen %></td>
     <td><%= link_to 'Edit', edit_screen_path(screen) %></td>
     <td><%= link_to 'Destroy', screen, :confirm => 'Are you sure?', :method => :delete %></td>
