- Controllers   * add new method hardware_in_place
- Partials
  * refactoring

- Views
  * refactoring

- Model
  * add validations

--- a/app/views/workstations/_form.html.erb
+++ b/app/views/workstations/_form.html.erb
@@ -1,7 +1,6 @@
 <% form_for(@workstation) do |f| %>
   <%= f.error_messages %>
 
-
   <%= render :partial => 'selector_pc_list' %>
 
   <p>
@@ -12,3 +11,5 @@
     <% end %>
   </p>
 <% end %>
+
+<%= debug(params) %>
