--- a/app/views/workstations/edit.html.erb
+++ b/app/views/workstations/edit.html.erb
@@ -1,4 +1,20 @@
+<% @c = Computer.find(@workstation.computer_id).name %>
+<% @s = Screen.find(@workstation.screen_id).model %>
+<% @p = Printer.find(@workstation.printer_id).model %>
+
+<%= 'Computer:' + @c %>
+<br>
+<%=  'Screen:' + @s %>
+<br>
+<%=  'Print:' + @p %>
+<br>
+
 <%= render :partial => 'form' %>
+
+<%= observe_field("places", :update => "outer",
+:url => { :controller => 'workstations', :action => :new },
+:with => "'place_id='+value") %>
+
 
 <%= link_to 'Show', @workstation %> |
 <%= link_to 'Back', workstations_path %>
