- Controllers   * refactoring in hardware_in_place method
- Models
  * added new methods scopes in computer, printer and screen models
  * added callbacks and methods in workstation model

- Partials
  * adapted partials lists to show new field of tables

- Migrations
  * added two new migrations to add new field 'is_part_of_a_workstation'
    in tables computers, screens and printers

--- a/app/views/computers/_list.html.erb
+++ b/app/views/computers/_list.html.erb
@@ -10,6 +10,7 @@
     <th>Cd</th>
     <th>Dvd</th>
     <th>Place</th>
+    <th>In workstation</th>
     <th colspan='3'>Actions</th>
   </tr>
 <% for computer in @computers %>
@@ -24,6 +25,7 @@
     <td><%= computer.cd.collect {|x| x.model + '<br>' } rescue nil %></td>
     <td><%= computer.dvd.collect {|x| x.model + '<br>' } rescue nil %></td>
     <td><%= computer.place.title rescue nil %></td>
+    <td><%= computer.is_part_of_a_workstation rescue nil %></td>
     <td><%= link_to 'Show', computer %></td>
     <td><%= link_to 'Edit', edit_computer_path(computer) %></td>
     <td><%= link_to 'Destroy', computer, :confirm => 'Are you sure?', :method => :delete %></td>
