--- a/app/views/printers/_list.html.erb
+++ b/app/views/printers/_list.html.erb
@@ -4,6 +4,7 @@
     <th>Serial Number</th>
     <th>Mark</th>
     <th>Place</th>
+    <th>In workstation</th>
     <th colspan='3'>Actions</th>
   </tr>
 <% for printer in @printers %>
@@ -12,6 +13,7 @@
     <td><%= printer.serialnumber %></td>
     <td><%= printer.mark.name rescue nil  %></td>
     <td><%= printer.place.title rescue nil %></td>
+    <td><%= printer.is_part_of_a_workstation rescue nil %></td>
     <td><%= link_to 'Show', printer %></td>
     <td><%= link_to 'Edit', edit_printer_path(printer) %></td>
     <td><%= link_to 'Destroy', printer, :confirm => 'Are you sure?', :method => :delete %></td>
