--- a/app/views/screens/_list.html.erb
+++ b/app/views/screens/_list.html.erb
@@ -4,6 +4,7 @@
     <th>Serial Number</th>
     <th>Mark</th>
     <th>Place</th>
+    <th>In workstation</th>
     <th colspan='3'>Actions</th>
   </tr>
 <% for screen in @screens %>
@@ -12,6 +13,7 @@
     <td><%= screen.serialnumber %></td>
     <td><%= screen.mark.name rescue nil  %></td>
     <td><%= screen.place.title rescue nil %></td>
+    <td><%= screen.is_part_of_a_workstation rescue nil %></td>
     <td><%= link_to 'Show', screen %></td>
     <td><%= link_to 'Edit', edit_screen_path(screen) %></td>
     <td><%= link_to 'Destroy', screen, :confirm => 'Are you sure?', :method => :delete %></td>
