--- a/app/views/workstations/_list.html.erb
+++ b/app/views/workstations/_list.html.erb
@@ -7,15 +7,13 @@
     <th colspan='3'>Actions</th>
   </tr>
   <% for workstation in @workstations %>
-  <% @c = Computer.find(workstation.computer_id).name %>
-  <% @s = Screen.find(workstation.screen_id).model %>
-  <% @p = Printer.find(workstation.printer_id).model %>
+  <% @c = Computer.find(workstation.computer_id).name rescue nil %>
+  <% @s = Screen.find(workstation.screen_id).model rescue nil %>
+  <% @p = Printer.find(workstation.printer_id).model  rescue nil %>
   <tr  class="<%= cycle("rowA","rowB") %>">
     <td><%= @c rescue nil  %></td>
     <td><%= @s rescue nil  %></td>
     <td><%= @p rescue nil  %></td>
-    <td><%= link_to 'Show', workstation %></td>
-    <td><%= link_to 'Edit', edit_workstation_path(workstation) %></td>
     <td><%= link_to 'Destroy', workstation, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
   <% end %>
