--- a/app/views/workstations/_selector_pc_list.html.erb
+++ b/app/views/workstations/_selector_pc_list.html.erb
@@ -1,5 +1,4 @@
 <%= javascript_include_tag "prototype" %>
-
 Place
 <select name="places" id="places">
   <option value="">Select a place</option>
@@ -10,21 +9,37 @@ Place
   <% end %>
 </select>
 
-Computer
-<%= collection_select 'workstation', 'computer_id', @computers, 'id', 'name',
-    {:prompt => true} %>
+<br>
 
-Screen:
-<%= collection_select 'workstation', 'screen_id', @screens, 'id', 'model',
-    {:prompt => true} %>
-
-Printer:
-<%= collection_select 'workstation', 'printer_id', @printers, 'id', 'model',
-    {:prompt => true} %>
+<%= @place_name rescue nil %>
 
 
+<table>
+  <tr>
+    <td valign='top'>
+      <% if not @computers.empty? %>
+      <%= label_tag('computers', 'List of computers') %>
+      <br>
+      <%= collection_select 'workstation', 'computer_id', @computers, 'id', 'name',{},
+          {:prompt => true, :size => @computers.count + 1 } %>
+      <% end %>
+    </td>
+    <td valign='top'>
+      <% if not @screens.empty? %>
+      <%= label_tag('screens', 'List of screens') %>
+      <br>
+      <%= collection_select 'workstation', 'screen_id', @screens, 'id', 'model',{},
+          {:prompt => true, :size => @screens.count + 1 } %>
+      <% end %>
+    </td>
+    <td valign='top'>
 
-
-
-
-
+      <% if not @printers.empty? %>
+      <%= label_tag('printers', 'List of printers') %>
+      <br>
+      <%= collection_select 'workstation', 'printer_id', @printers, 'id', 'model',{},
+          {:prompt => true, :size => @printers.count + 1 } %>
+      <% end %>
+    </td>
+  </tr>
+</table>
