--- a/app/views/workstations/_stats.html.erb
+++ b/app/views/workstations/_stats.html.erb
@@ -1,24 +1,16 @@
-<% cache(:fragment => "computers/_stats") do %>
-In numbers of computers:
-
-<div>
-  <%= link_to 'All', :controller => "computers", :action => "index" %>
-  <%= @all %>
-</div>
-
-<div>
-  <%= link_to 'Availables', :controller => "computers", :action => "available" %>
-  <%= @availables %>
-</div>
-
-<div>
-  <%= link_to 'Unavailables', :controller => "computers", :action => "unavailable" %>
-  <%= @unavailables %>
-</div>
+<% cache(:fragment => "workstations/_stats") do %>
 
 
+Computers:
 <%  @value = GoogleChart.pie_3d_330x100(@chart).to_url %>
 <%= image_tag(@value)  rescue nil %>
 
+Screens:
+<%  @value = GoogleChart.pie_3d_330x100(@chart_screen).to_url %>
+<%= image_tag(@value)  rescue nil %>
+
+Printers:
+<%  @value = GoogleChart.pie_3d_330x100(@chart_printer).to_url %>
+<%= image_tag(@value)  rescue nil %>
 
 <% end %>
