- Controllers   * refactoring controller
- Layout
  * deleting call to stats partial in places
  * deleting line write controller and action in workstation

- Partials
  * deleted stats partial in place module
  * little changes in shared menu

- Routes
  * added route stats for place module

--- a/app/views/shared/_new_menu.html.erb
+++ b/app/views/shared/_new_menu.html.erb
@@ -5,7 +5,7 @@
   <ul class="menu2">
 
     <li class="top">
-      <a href="#" id="telmex" class="top_link">
+      <a href="/workstations" id="telmex" class="top_link">
         <span class="down">Workstations</span>
         <!--[if gte IE 7]><!--></a><!--<![endif]-->
       <!--[if lte IE 6]><table><tr><td><![endif]-->
@@ -18,13 +18,14 @@
 
 
     <li class="top">
-      <a href="#" id="telmex" class="top_link">
+      <a href="/places" id="telmex" class="top_link">
         <span class="down">Places</span>
         <!--[if gte IE 7]><!--></a><!--<![endif]-->
       <!--[if lte IE 6]><table><tr><td><![endif]-->
       <ul class="sub">
         <li><a href="/places">List all places</a></li>
         <li><a href="/places/new">New</a></li>
+        <li><a href="/places/stats">Stats</a></li>
       </ul>
       <!--[if lte IE 6]></td></tr></table></a><![endif]-->
     </li>
@@ -88,7 +89,7 @@
     </li>
 
     <li class="top">
-      <a href="#" id="telmex" class="top_link">
+      <a href="/marks" id="telmex" class="top_link">
         <span class="down">Marks</span>
         <!--[if gte IE 7]><!--></a><!--<![endif]-->
       <!--[if lte IE 6]><table><tr><td><![endif]-->
