--- a/app/views/layouts/computers.html.erb
+++ b/app/views/layouts/computers.html.erb
@@ -19,7 +19,7 @@
           <div id="primaryContent">
             <div class="box">
               <div class="boxContent">
-                <h2><%= controller.controller_name %> : <%= controller.action_name %></h2>
+                <h2><%= t 'computers.title' %></h2>
                 <%= yield  %>
               </div>
             </div>
