--- a/app/views/computers/_search.html.erb
+++ b/app/views/computers/_search.html.erb
@@ -4,23 +4,23 @@
 <table>
   <% form_tag :action => 'search' do %>
   <tr>
-    <td><label>Name:</label></td>
+    <td><label><%= t 'computers.name' %></label></td>
     <td><%= text_field_with_auto_complete :computer, :name, {:size => 20}, {:method => :get} %></td>
-    <td><%= submit_tag "Search" %></td>
+    <td><%= submit_tag t 'search.label' %></td>
     <% end %>
   </tr>
   <tr>
     <% form_tag :action => 'search' do %>
     <td><label>Ip:</label></td>
     <td><%= text_field_with_auto_complete :computer, :ip, {:size => 20}, {:method => :get} %></td>
-    <td><%= submit_tag "Search" %></td>
+    <td><%= submit_tag t 'search.label' %></td>
     <% end %>
   </tr>
   <tr>
     <% form_tag :action => 'search' do %>
     <td><label>Mac:</label></td>
     <td><%= text_field_with_auto_complete :computer, :mac, {:size => 20}, {:method => :get} %></td>
-    <td><%= submit_tag "Search" %></td>
+    <td><%= submit_tag t 'search.label' %></td>
   </tr>
   <% end %>
 </table>
