- Controllers   * added before filter for all controllers
- Partial
  * added 'logout' option for shared partial menu

--- a/app/views/shared/_new_menu.html.erb
+++ b/app/views/shared/_new_menu.html.erb
@@ -99,6 +99,14 @@
       </ul>
       <!--[if lte IE 6]></td></tr></table></a><![endif]-->
     </li>
+
+    <li class="top">
+      <a href="/logout" id="telmex" class="top_link">
+        <span class="down">Logout</span>
+        <!--[if gte IE 7]><!--></a><!--<![endif]-->
+    </li>
+
+
   </ul>
 </ul>
 <!-- FIN MENU-->
