- Locales   * added new translates

--- a/app/views/shared/_new_menu.html.erb
+++ b/app/views/shared/_new_menu.html.erb
@@ -42,10 +42,10 @@
             <li><a href="/computers/new"><%= t 'menu.new-computer' %></a></li>
           </ul>
         </li>
-        <li><a href="/mother_boards" class="fly">Motherboards</a>
+        <li><a href="/mother_boards" class="fly"><%= t 'menu.motherboards' %></a>
           <ul>
-            <li><a href="/mother_boards">List</a></li>
-            <li><a href="/mother_boards/new">New</a></li>
+            <li><a href="/mother_boards"><%= t 'menu.list-motherboards' %></a></li>
+            <li><a href="/mother_boards/new"><%= t 'menu.new-motherboard' %></a></li>
           </ul>
         </li>
         <li><a href="/harddisks" class="fly">Hardisks</a>
