- Locales   * added new translates

--- a/app/views/shared/_new_menu.html.erb
+++ b/app/views/shared/_new_menu.html.erb
@@ -48,10 +48,10 @@
             <li><a href="/mother_boards/new"><%= t 'menu.new-motherboard' %></a></li>
           </ul>
         </li>
-        <li><a href="/harddisks" class="fly">Hardisks</a>
+        <li><a href="/harddisks" class="fly"><%= t 'menu.harddisks' %></a>
           <ul>
-            <li><a href="/harddisks">List</a></li>
-            <li><a href="/harddisks/new">New</a></li>
+            <li><a href="/harddisks"><%= t 'menu.list-harddisks' %></a></li>
+            <li><a href="/harddisks/new"><%= t 'menu.new-harddisk' %></a></li>
           </ul>
         </li>
         <li><a href="/memories" class="fly">Memories</a>
