- Locales   * added new translates

--- a/app/views/shared/_new_menu.html.erb
+++ b/app/views/shared/_new_menu.html.erb
@@ -54,10 +54,10 @@
             <li><a href="/harddisks/new"><%= t 'menu.new-harddisk' %></a></li>
           </ul>
         </li>
-        <li><a href="/memories" class="fly">Memories</a>
+        <li><a href="/memories" class="fly"><%= t 'menu.memories' %></a>
           <ul>
-            <li><a href="/memories">List</a></li>
-            <li><a href="/memories/new">New</a></li>
+            <li><a href="/memories"><%= t 'menu.list-memories' %></a></li>
+            <li><a href="/memories/new"><%= t 'menu.new-memorie' %></a></li>
           </ul>
         </li>
         <li><a href="/cds" class="fly">Cds</a>
@@ -72,16 +72,16 @@
             <li><a href="/dvds/new">New</a></li>
           </ul>
         </li>
-        <li><a href="/screens" class="fly">Screens</a>
+        <li><a href="/screens" class="fly"><%= t 'menu.screens' %></a>
           <ul>
-            <li><a href="/screens">List</a></li>
-            <li><a href="/screens/new">New</a></li>
+            <li><a href="/screens"><%= t 'menu.list-screens' %></a></li>
+            <li><a href="/screens/new"><%= t 'menu.new-screens' %></a></li>
           </ul>
         </li>
-        <li><a href="/printers" class="fly">Printers</a>
+        <li><a href="/printers" class="fly"><%= t 'menu.printers' %></a>
           <ul>
-            <li><a href="/printers">List</a></li>
-            <li><a href="/printers/new">New</a></li>
+            <li><a href="/printers"><%= t 'menu.list-printers' %></a></li>
+            <li><a href="/printers/new"><%= t 'menu.new-printers' %></a></li>
           </ul>
         </li>
       </ul>
