--- a/app/views/dvds/_search.html.erb
+++ b/app/views/dvds/_search.html.erb
@@ -3,16 +3,16 @@
 <table>
   <% form_tag :action => 'search' do %>
   <tr>
-    <td><label>Model:</label></td>
+    <td><label><%= t 'dvds.model' %></label></td>
     <td><%= text_field_with_auto_complete :dvd, :model, {:size => 20}, {:method => :get} %></td>
-    <td><%= submit_tag "Search" %></td>
+    <td><%= submit_tag   t 'search.label' %></td>
     <% end %>
   </tr>
   <tr>
     <% form_tag :action => 'search' do %>
-    <td><label>Serial Number:</label></td>
+    <td><label><%= t 'dvds.sn' %></label></td>
     <td><%= text_field_with_auto_complete :dvd, :serialnumber, {:size => 20}, {:method => :get} %></td>
-    <td><%= submit_tag "Search" %></td>
+    <td><%= submit_tag   t 'search.label' %></td>
   </tr>
   <% end %>
 </table>
