- Locales   * added new translates

--- a/app/views/shared/_new_menu.html.erb
+++ b/app/views/shared/_new_menu.html.erb
@@ -102,7 +102,7 @@
 
     <li class="top">
       <a href="/logout" id="telmex" class="top_link">
-        <span class="down">Logout</span>
+        <span class="down"><%= t 'menu.logout' %></span>
         <!--[if gte IE 7]><!--></a><!--<![endif]-->
     </li>
 
