- Locales   * added new translates

--- a/app/views/workstations/_form.html.erb
+++ b/app/views/workstations/_form.html.erb
@@ -5,9 +5,9 @@
 
   <p>
     <% if action_name == 'new' %>
-    <%= f.submit "Create" %>
+    <%= f.submit t('workstations.create') %>
     <% else %>
-    <%= f.submit "Edit" %>
+    <%= f.submit t('workstations.edit') %>
     <% end %>
   </p>
 <% end %>
