--- a/app/views/workstations/_list.html.erb
+++ b/app/views/workstations/_list.html.erb
@@ -1,10 +1,10 @@
 <% if not @workstations.empty? %>
 <table>
   <tr>
-    <th>Computer</th>
-    <th>Screen</th>
-    <th>Printer</th>
-    <th colspan='3'>Actions</th>
+    <th><%= t 'workstations.computer' %></th>
+    <th><%= t 'workstations.screen' %></th>
+    <th><%= t 'workstations.printer' %></th>
+    <th colspan='3'><%= t 'workstations.action' %></th>
   </tr>
   <% for workstation in @workstations %>
   <% @c = Computer.find(workstation.computer_id).name rescue nil %>
@@ -14,7 +14,7 @@
     <td><%= @c rescue nil  %></td>
     <td><%= @s rescue nil  %></td>
     <td><%= @p rescue nil  %></td>
-    <td><%= link_to 'Destroy', workstation, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to t('workstations.destroy'), workstation, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
   <% end %>
 </table>
