--- a/app/views/workstations/new.html.erb
+++ b/app/views/workstations/new.html.erb
@@ -4,4 +4,4 @@
 :url => { :controller => 'workstations', :action => :new },
 :with => "'place_id='+value") %>
 
-<%= link_to 'Back', workstations_path %>
+<%= link_to t('workstations.back'), workstations_path %>
