--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -10,5 +10,5 @@ List of computers in this place:
 
 <br>
 
-<%= link_to 'Edit', edit_place_path(@place) %> |
-<%= link_to 'Back', places_path %>
+<%= link_to t('places.edit'), edit_place_path(@place) %> |
+<%= link_to t('places.back'), places_path %>
