--- a/app/views/places/_list.html.erb
+++ b/app/views/places/_list.html.erb
@@ -1,10 +1,10 @@
 <h2><%= @text %></h2>
 <table>
   <tr>
-    <th>Title</th>
-    <th>Description</th>
-    <th>Computers</th>
-    <th colspan='3'>Actions</th>
+    <th><%= t('places.name') %></th>
+    <th><%= t('places.description') %></th>
+    <th><%= t('places.computer') %></th>
+    <th colspan='3'><%= t('places.action') %></th>
   </tr>
 <% for place in @places %>
   <tr  class="<%= cycle("rowA","rowB") %>">
@@ -12,8 +12,8 @@
     <td><%= place.description %></td>
     <td><%= place.computer.count %></td>
     <td><%= link_to 'Show', place %></td>
-    <td><%= link_to 'Edit', edit_place_path(place) %></td>
-    <td><%= link_to 'Destroy', place, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to t('places.edit'), edit_place_path(place) %></td>
+    <td><%= link_to t('places.destroy'), place, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
