--- a/app/views/computers/edit.html.erb
+++ b/app/views/computers/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render :partial => 'form' %>
 
-<%= link_to 'Show', @computer %> |
-<%= link_to 'Back', computers_path %>
+<%= link_to t('computers.show'), @computer %> |
+<%= link_to t('computers.back'), computers_path %>
