--- a/app/views/computers/_stats.html.erb
+++ b/app/views/computers/_stats.html.erb
@@ -1,18 +1,18 @@
 <% cache(:fragment => "computers/_stats") do %>
-In numbers of computers:
+<%= t('computers.stats_paragraph') %>:
 
 <div>
-  <%= link_to 'All', :controller => "computers", :action => "index" %>
+  <%= link_to t('computers.all'), :controller => "computers", :action => "index" %>
   <%= @all %>
 </div>
 
 <div>
-  <%= link_to 'Availables', :controller => "computers", :action => "available" %>
+  <%= link_to t('computers.available'), :controller => "computers", :action => "available" %>
   <%= @availables %>
 </div>
 
 <div>
-  <%= link_to 'Unavailables', :controller => "computers", :action => "unavailable" %>
+  <%= link_to t('computers.unavailable'), :controller => "computers", :action => "unavailable" %>
   <%= @unavailables %>
 </div>
 
