- Locales   * added new translates

--- a/app/views/harddisks/_list.html.erb
+++ b/app/views/harddisks/_list.html.erb
@@ -1,8 +1,8 @@
 <table>
   <tr>
-    <th>Model</th>
-    <th>Serial Number</th>
-    <th>Mark</th>
+    <th><%= t('harddisks.model') %></th>
+    <th><%= t('harddisks.sn') %></th>
+    <th><%= t('harddisks.mark') %></th>
     <th>Pc</th>
     <th colspan='3'>Actions</th>
   </tr>
