--- a/app/views/mother_boards/_list.html.erb
+++ b/app/views/mother_boards/_list.html.erb
@@ -1,8 +1,8 @@
 <table>
   <tr>
-    <th>Model</th>
-    <th>Serial Number</th>
-    <th>Mark</th>
+    <th><%= t('motherboards.model') %></th>
+    <th><%= t('motherboards.sn') %></th>
+    <th><%= t('motherboards.mark') %></th>
     <th>Pc</th>
     <th colspan='3'>Actions</th>
   </tr>
